# backend-intern-assessment

./: .gitignore  README.md  Scalabilty.md  docker-compose.yml  pyproject.toml
backend/: DockerFile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  items.py  router.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
frontend/src/: index.html
